tlsdate: update to 0.0.13 and add SNI support.
Update to tlsdate-0.0.13.
tlsdate-0010-flush-stdout.patch and
tlsdate-0030-max-time-delay.patch have been accepted upstream,
remove them from the local repo.

tlsdate now tries to use preadv and pwritev, which not all
platforms support. Make it use readv and writev instead.

Add support for SSL SNI, which allows us to specify a
gfsvc.com address instead of google.com.

Also fix a string-vs-numeric comparison issue in run-tlsdate:
[ 45.491299] tlsdate: /bin/run-tlsdate: 143: [: 0: unexpected operator

Change-Id: If39d7ab1f355de2438049f221409fbce96376c63

--- a/package/tlsdate/Config.in
+++ b/package/tlsdate/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_TLSDATE
 	bool "tlsdate"
+	select BR2_PACKAGE_LIBEVENT
 	help
 	  tlsdate is a simple client that extracts the current time from
 	  a TLS/SSL handshake.
