--- a/package/py/Config.in
+++ b/package/py/Config.in
@@ -33,5 +33,6 @@ source "package/py/py-dns/Config.in"
 source "package/py/py-monotime/Config.in"
 source "package/py/py-yaml/Config.in"
 source "package/py/py-numpy/Config.in"
+source "package/py/py-pympler/Config.in"
 
 endmenu
