Add oemcrypto package
Change-Id: Ib4cb076baa50f1a0e00245ac943d3b6014da4e57

--- a/package/Config.in
+++ b/package/Config.in
@@ -652,6 +652,7 @@ source "package/netflix_nrd/Config.in"
 source "package/bcm_common/Config.in"
 source "package/bcm_bseav/Config.in"
 source "package/bcm_magnum/Config.in"
+source "package/bcm_oemcrypto/Config.in"
 source "package/bcm_rockford/Config.in"
 source "package/bcm_nexus/Config.in"
 source "package/bcm_directfb/Config.in"
