chimera: stubs packages for the HFW software
	* HAL, Link Mgr, Diagnostics

Change-Id: Ib96f653b14607afebb2e58a60cff2eb6631a8ef7

--- a/package/Config.in
+++ b/package/Config.in
@@ -636,6 +636,10 @@ source "package/google/Config.in"
 source "package/humax_misc/Config.in"
 endmenu
 
+menu "HFW (Athena Wireless) custom build"
+source "package/hfw/Config.in"
+endmenu
+
 menu "Google open source packages"
 source "package/catawampus/Config.in"
 endmenu
