--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -37,7 +37,6 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_SMARTMONTOOLS=y
 BR2_PACKAGE_USB_MODESWITCH=y
 BR2_PACKAGE_USBUTILS=y
-BR2_PACKAGE_PYTHON=y
 BR2_PACKAGE_PYTHON_BZIP2=y
 BR2_PACKAGE_PYTHON_READLINE=y
 BR2_PACKAGE_PYTHON_SSL=y
@@ -47,6 +46,7 @@ BR2_PACKAGE_PY_DNS=y
 BR2_PACKAGE_PY_MONOTIME=y
 BR2_PACKAGE_PYTHON_CRYPTO=y
 BR2_PACKAGE_OPENSSL_BIN=y
+BR2_PACKAGE_PROTOBUF=y
 BR2_PACKAGE_LIBCLI=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_DHCP=y
