quantenna: build hostapd with madwifi support.
Change-Id: Icdedccfb8033ed90f5d042061ba5a3039669f8fb

--- a/package/Config.in
+++ b/package/Config.in
@@ -681,6 +681,7 @@ endmenu
 
 menu "Quantenna custom build"
 source "package/quantenna_drivers/Config.in"
+source "package/hostapd-quantenna/Config.in"
 endmenu
 
 menu "Drivers"
