--- a/configs/gffrenzy_defconfig
+++ b/configs/gffrenzy_defconfig
@@ -17,8 +17,8 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 BR2_ROOTFS_DEVICE_TABLE="/dev/null"
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_POST_BUILD_SCRIPT="${TOPDIR}/support/scripts/postbuild.sh"
-BR2_TARGET_GENERIC_PLATFORM_NAME="gfex250"
-BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFEX250"
+BR2_TARGET_GENERIC_PLATFORM_NAME="gffrenzy"
+BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFFRENZY"
 BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/skids.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_OPENSSL=y
@@ -29,7 +29,7 @@ BR2_PACKAGE_HOSTAPD_QUANTENNA_WPS=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_DASH=y
 BR2_PACKAGE_MODULE_INIT_TOOLS=y
-BR2_PACKAGE_QUANTENNA_DRIVERS_STANDALONE=y
+BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_MODULE=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfex250_defconfig"
 BR2_PACKAGE_BACKPORTS_CUSTOM_SITE="backports-quantenna"
@@ -40,4 +40,4 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/skids"
 BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="HEAD"
-BR2_LINUX_KERNEL_DEFCONFIG="gfex250"
+BR2_LINUX_KERNEL_DEFCONFIG="gffrenzy"
