--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -24,6 +24,7 @@ BR2_TARGET_GENERIC_PLATFORM_NAME="gfrg200"
 BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFRG200 GFRG210"
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_GZIP=y
+BR2_PACKAGE_TRACE_CMD=y
 BR2_PACKAGE_PKG_CONFIG=y
 BR2_PACKAGE_TAR=y
 BR2_PACKAGE_E2FSPROGS=y
@@ -34,7 +35,6 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_SMARTMONTOOLS=y
 BR2_PACKAGE_USB_MODESWITCH=y
 BR2_PACKAGE_USBUTILS=y
-BR2_PACKAGE_PYTHON=y
 BR2_PACKAGE_PYTHON_BZIP2=y
 BR2_PACKAGE_PYTHON_READLINE=y
 BR2_PACKAGE_PYTHON_SSL=y
@@ -84,7 +84,6 @@ BR2_PACKAGE_NDISC6_RDISC6=y
 # BR2_PACKAGE_SAMBA_TDB is not set
 # BR2_PACKAGE_SAMBA_TESTPARM is not set
 # BR2_PACKAGE_SAMBA_WINBINDD is not set
-BR2_PACKAGE_TRACE_CMD=y
 BR2_PACKAGE_VCONFIG=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
@@ -109,6 +108,7 @@ BR2_PACKAGE_BCM_DRIVER_MOCA2=y
 BR2_PACKAGE_MINDSPEED_DRIVERS=y
 BR2_PACKAGE_MINDSPEED_DRIVER_PFE=y
 BR2_PACKAGE_QUALCOMM_SWITCH=y
+BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_HOST=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfrg200_defconfig"
 BR2_PACKAGE_FIRMWARE=y
