--- a/package/golang/Config.in
+++ b/package/golang/Config.in
@@ -14,5 +14,6 @@ source "package/golang/go_net/Config.in"
 source "package/golang/go_oauth2/Config.in"
 source "package/golang/go_protobuf/Config.in"
 source "package/golang/go_shanemhansen_gossl/Config.in"
+source "package/golang/go_sys/Config.in"
 source "package/golang/go_tpm/Config.in"
 endmenu
