Create --unsigned flag to create unsigned builds
This change is designed to allow us to create production builds without
a dependency on Keystore, with the ultimate goal of automating release
builds.  With this change we can perform post-build signing which should
drastically reduce the amount of time required to create a release.

Some details can be found at http://go/gf-cpe-signing

Change-Id: If23750cdd16a73610ce1a8a8e8c3fe42e7b86e55

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -82,6 +82,12 @@ config BR2_PACKAGE_GOOGLE_PROD
 	help
 	  Build google production release, using the signed/locked bootloader.
 
+config BR2_PACKAGE_GOOGLE_UNSIGNED
+	bool "Unsigned Release"
+  default n
+	help
+	  Prevent signing workflows from being executed to allow post-build signing.
+
 config BR2_PACKAGE_GOOGLE_KEY_SUFFIX
 	string "Signing key suffix"
 	help
