gfch100: add sgdisk, enable signing
Change-Id: Id788e0cf94a5d175e864d2e2d7b6bd54e513826c

--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -60,6 +60,9 @@ BR2_PACKAGE_NDISC6_NDISC6=y
 BR2_PACKAGE_NDISC6_RDISC6=y
 BR2_PACKAGE_VCONFIG=y
 BR2_PACKAGE_MODULE_INIT_TOOLS=y
+BR2_PACKAGE_GPTFDISK=y
+BR2_PACKAGE_GPTFDISK_GDISK=y
+BR2_PACKAGE_GPTFDISK_SGDISK=y
 BR2_PACKAGE_UTIL_LINUX_SWITCH_ROOT=y
 BR2_PACKAGE_GOOGLE_PLATFORM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
