quantenna: build wpa_supplicant with madwifi support.
Change-Id: I29557d58de1ece1b16d460f127dd114464503f8d

--- a/package/Config.in
+++ b/package/Config.in
@@ -686,6 +686,7 @@ endmenu
 menu "Quantenna custom build"
 source "package/quantenna_drivers/Config.in"
 source "package/hostapd-quantenna/Config.in"
+source "package/wpa_supplicant-quantenna/Config.in"
 endmenu
 
 menu "Drivers"
