Enable Quantenna support on gftv254.
Change-Id: Ic04477b74a56fa89f6fda8ca752108bb2d1d1f00

--- a/configs/gftv254_defconfig
+++ b/configs/gftv254_defconfig
@@ -78,6 +78,9 @@ BR2_PACKAGE_BCM_COMMON_PLATFORM="97439"
 BR2_PACKAGE_BCM_COMMON_PLATFORM_REV="B0"
 BR2_PACKAGE_BCM_BLUETOOTH=y
 BR2_PACKAGE_BCM_BLUETOOTH_FW=y
+BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_HOST=y
+BR2_PACKAGE_BACKPORTS_CUSTOM=y
+BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gftv254_defconfig"
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_PACKAGE_SIMPLERAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
