Upgrade golang to the newest 1.5.1 version.
Bug: 25293905
Change-Id: Icc2fff6540538d7e854b2705b197f7dc5c4eac04

--- a/toolchain/Config.in
+++ b/toolchain/Config.in
@@ -38,5 +38,6 @@ source "toolchain/toolchain-crosstool-ng/Config.in"
 source "toolchain/toolchain-common.in"
 source "toolchain/toolchain-buildroot/Config.in.2"
 source "toolchain/golang/Config.in"
+source "toolchain/golang_bootstrap/Config.in"
 
 endmenu
