--- a/toolchain/golang/Config.in
+++ b/toolchain/golang/Config.in
@@ -1,6 +1,7 @@
 config BR2_TOOLCHAIN_GOLANG
 	bool "Build Go language (golang) distribution"
 	depends on BR2_arm || BR2_i386 || BR2_x86_64
+	depends on BR2_TOOLCHAIN_GOLANG_BOOTSTRAP
 	default n
 	help
 	  This is the Go language distribution.
