--- a/configs/gfrg200_newkernel-4.1_defconfig
+++ b/configs/gfrg200_newkernel-4.1_defconfig
@@ -35,7 +35,6 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_SMARTMONTOOLS=y
 BR2_PACKAGE_USB_MODESWITCH=y
 BR2_PACKAGE_USBUTILS=y
-BR2_PACKAGE_PYTHON=y
 BR2_PACKAGE_PYTHON_BZIP2=y
 BR2_PACKAGE_PYTHON_READLINE=y
 BR2_PACKAGE_PYTHON_SSL=y
@@ -109,6 +108,7 @@ BR2_PACKAGE_BCM_DRIVER_MOCA2=y
 BR2_PACKAGE_MINDSPEED_DRIVERS=y
 BR2_PACKAGE_MINDSPEED_DRIVER_PFE=y
 BR2_PACKAGE_QUALCOMM_SWITCH=y
+BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_HOST=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfrg200_newkernel-4.1_defconfig"
 BR2_PACKAGE_FIRMWARE=y
