--- a/package/backports-custom/gfrg200_newkernel-4.1_defconfig
+++ b/package/backports-custom/gfrg200_newkernel-4.1_defconfig
@@ -28,8 +28,7 @@ CPTCFG_ATH10K_DFS_CERTIFIED=y
 # CPTCFG_ATH10K_USE_NCNB_DESCR is not set
 # CPTCFG_ATH10K_USE_NCNB_SKB is not set
 CPTCFG_ATH10K_USE_COMCERTO_WIFI_FASTPATH=y
-CPTCFG_MWIFIEX=m
-CPTCFG_MWIFIEX_USB=m
+CPTCFG_QUANTENNA_PCIE_HOST=m
 # CPTCFG_ETHERNET is not set
 CPTCFG_USB_USBNET=m
 CPTCFG_USB_NET_RNDIS_HOST=m
