GFRG200/GFRG210: Switch to Linux 4.1
In configs/ and package/backports-custom/ respectively,
rename gfrg200_defconfig to gfrg200_oldkernel-3.2_defconfig
rename gfrg200_newkernel-4.1_defconfig to gfrg200_defconfig

Change-Id: I74d2c3d6a086069cbd5552586ef0b07bf0eb47dc

--- a/package/backports-custom/gfrg200_defconfig
+++ b/package/backports-custom/gfrg200_defconfig
@@ -25,8 +25,8 @@ CPTCFG_ATH10K_PCI=m
 CPTCFG_ATH10K_DEBUG=y
 CPTCFG_ATH10K_DEBUGFS=y
 CPTCFG_ATH10K_DFS_CERTIFIED=y
-CPTCFG_ATH10K_USE_NCNB_DESCR=y
-CPTCFG_ATH10K_USE_NCNB_SKB=y
+# CPTCFG_ATH10K_USE_NCNB_DESCR is not set
+# CPTCFG_ATH10K_USE_NCNB_SKB is not set
 CPTCFG_ATH10K_USE_COMCERTO_WIFI_FASTPATH=y
 CPTCFG_QUANTENNA_PCIE_HOST=m
 # CPTCFG_ETHERNET is not set
