--- a/configs/gfrg200_newkernel-4.1_defconfig
+++ b/configs/gfrg200_newkernel-4.1_defconfig
@@ -110,7 +110,7 @@ BR2_PACKAGE_MINDSPEED_DRIVER_PFE=y
 BR2_PACKAGE_QUALCOMM_SWITCH=y
 BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_HOST=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
-BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfrg200_oldkernel-3.2_defconfig"
+BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfrg200_newkernel-4.1_defconfig"
 BR2_PACKAGE_FIRMWARE=y
 BR2_PACKAGE_FIRMWARE_FILENAMES="ath10k/QCA988X/hw2.0/*.bin htc_9271.fw rtlwifi/rtl8192cufw.bin ar9*.fw mrvl/usb8[78]97* ./mwl8k/fmimage_8764_ap-1.fw"
 BR2_TARGET_ROOTFS_SQUASHFS=y
@@ -126,4 +126,5 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/mindspeed"
 BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="HEAD"
 BR2_LINUX_KERNEL_DEFCONFIG="gfrg200"
-BR2_LINUX_KERNEL_ZIMAGE=y
+BR2_LINUX_KERNEL_APPENDED_ZIMAGE=y
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="optimus"
