mindspeed_drivers: Make the URL of the git repository configurable
Change-Id: Ib0e437f958aabe3aa0c17dcbe6eaf0b66e5c91a9

--- a/package/mindspeed_drivers/Config.in
+++ b/package/mindspeed_drivers/Config.in
@@ -6,4 +6,8 @@ menu "Mindspeed Drivers"
 		bool "Enable Mindspeed PFE Driver"
 		depends on BR2_PACKAGE_MINDSPEED_DRIVERS
 		default n
+	config BR2_PACKAGE_MINDSPEED_DRIVERS_GIT_REPO_URL
+		string "URL of Git repository"
+		depends on BR2_PACKAGE_MINDSPEED_DRIVERS
+		default "repo://vendor/mindspeed/drivers"
 endmenu
