--- a/configs/gfsc100_defconfig
+++ b/configs/gfsc100_defconfig
@@ -80,6 +80,7 @@ BR2_PACKAGE_GOOGLE_BUFFET=y
 BR2_PACKAGE_GOOGLE_CRYPTOHOME=y
 BR2_PACKAGE_MINDSPEED_DRIVERS=y
 BR2_PACKAGE_MINDSPEED_DRIVER_PFE=y
+BR2_PACKAGE_MINDSPEED_DRIVERS_GIT_REPO_URL="repo://vendor/mindspeed/drivers-3.2"
 BR2_PACKAGE_FIRMWARE=y
 BR2_PACKAGE_FIRMWARE_FILENAMES="dvb-usb-sc100.fw dvbsky-firmware/dvb-fe-rs6000.fw"
 BR2_PACKAGE_DVBSNOOP=y
@@ -92,7 +93,7 @@ BR2_TARGET_ROOTFS_GINSTALL_MINIMUM_VERSION=""
 BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/mindspeed/spacecast"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/mindspeed"
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/mindspeed-3.2"
 BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="HEAD"
 BR2_LINUX_KERNEL_DEFCONFIG="gfsc100"
 BR2_LINUX_KERNEL_ZIMAGE=y
