--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -140,6 +140,7 @@ config BR2_PACKAGE_GOOGLE_NETWORK_BOX
 	select BR2_PACKAGE_IFPLUGD
 	select BR2_PACKAGE_PROTOBUF
 	select BR2_PACKAGE_INADYN
+	select BR2_PACKAGE_LIBGLIB2
 
 config BR2_PACKAGE_GOOGLE_SPACECAST
 	bool "Device can act as Google SpaceCast Box"
@@ -153,6 +154,7 @@ config BR2_PACKAGE_GOOGLE_WINDCHARGER
 	depends on !BR2_PACKAGE_GOOGLE_PLATFORM_ONLY
 	select BR2_PACKAGE_IFPLUGD
 	select BR2_PACKAGE_INADYN
+	select BR2_PACKAGE_LIBGLIB2
 
 config BR2_PACKAGE_GOOGLE_STORAGE_BOX
 	bool "Device can act as Google Fiber Storage Box"
