--- a/configs/gfrg200_oldkernel-3.2_defconfig
+++ b/configs/gfrg200_oldkernel-3.2_defconfig
@@ -107,10 +107,11 @@ BR2_PACKAGE_BCM_DRIVERS=y
 BR2_PACKAGE_BCM_DRIVER_MOCA2=y
 BR2_PACKAGE_MINDSPEED_DRIVERS=y
 BR2_PACKAGE_MINDSPEED_DRIVER_PFE=y
+BR2_PACKAGE_MINDSPEED_DRIVERS_GIT_REPO_URL="repo://vendor/mindspeed/drivers-3.2"
 BR2_PACKAGE_QUALCOMM_SWITCH=y
 BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_HOST=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
-BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfrg200_newkernel-4.1_defconfig"
+BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfrg200_oldkernel-3.2_defconfig"
 BR2_PACKAGE_FIRMWARE=y
 BR2_PACKAGE_FIRMWARE_FILENAMES="ath10k/QCA988X/hw2.0/*.bin htc_9271.fw rtlwifi/rtl8192cufw.bin ar9*.fw mrvl/usb8[78]97* ./mwl8k/fmimage_8764_ap-1.fw"
 BR2_TARGET_ROOTFS_SQUASHFS=y
@@ -123,8 +124,7 @@ BR2_TARGET_ROOTFS_GINSTALL_V4=y
 BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/mindspeed/optimus"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/mindspeed"
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/mindspeed-3.2"
 BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="HEAD"
 BR2_LINUX_KERNEL_DEFCONFIG="gfrg200"
-BR2_LINUX_KERNEL_APPENDED_ZIMAGE=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="optimus"
+BR2_LINUX_KERNEL_ZIMAGE=y
