cpss: add marvell's switch config software tool to gfch100 build
Change-Id: I0a74c1d8a7d28af222163432e657e732549e8c90

--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -72,6 +72,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_PLATFORM_ONLY=y
 BR2_PACKAGE_CATAWAMPUS=y
+BR2_PACKAGE_MV_CPSS=y
 BR2_PACKAGE_FIRMWARE=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_TARGET_ROOTFS_SQUASHFS4_XZ=y
