--- a/package/Config.in
+++ b/package/Config.in
@@ -682,6 +682,7 @@ endmenu
 
 menu "Marvell custom build"
 source "package/mv_app/Config.in"
+source "package/mv_cpss/Config.in"
 endmenu
 
 menu "Quantenna custom build"
