--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -71,6 +71,8 @@ BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_PLATFORM_ONLY=y
+BR2_PACKAGE_HFW_GLAUKUS_HAL=y
+BR2_PACKAGE_HFW_GLAUKUS_LINKMAN=y
 BR2_PACKAGE_CATAWAMPUS=y
 BR2_PACKAGE_MV_CPSS=y
 BR2_PACKAGE_FIRMWARE=y
