buildroot/catawampus: add deps for yaml
Add a buildroot dependency to catawampus to pull in both libyaml and
pyyaml. Without this running cwmpd with --platform=gfonu will fail to
start with an ImportError. All unit tests passed.

Successfully built for GFCH100, confirmed that cwmpd starts and cwmp can
now connect.

Change-Id: Ia5d9ca70b5b149da2b2af205f622c6e3a167ef19

--- a/package/catawampus/Config.in
+++ b/package/catawampus/Config.in
@@ -1,8 +1,9 @@
 config BR2_PACKAGE_CATAWAMPUS
 	bool "catawampus"
-	select BR2_PACKAGE_PY_CURL
+	select BR2_PACKAGE_PYTHON
 	select BR2_PACKAGE_PYTHON_NETIFACES
 	select BR2_PACKAGE_PYTHON_ZLIB
-	select BR2_PACKAGE_PYTHON
+	select BR2_PACKAGE_PY_CURL
+	select BR2_PACKAGE_PY_YAML
 	help
 	  tr-69 management agent.
