--- a/package/py/Config.in
+++ b/package/py/Config.in
@@ -30,6 +30,7 @@ config BR2_PACKAGE_PY_CURL
 	select BR2_PACKAGE_PYTHON_SETUPTOOLS
 
 source "package/py/py-dns/Config.in"
+source "package/py/py-inotify/Config.in"
 source "package/py/py-monotime/Config.in"
 source "package/py/py-yaml/Config.in"
 source "package/py/py-numpy/Config.in"
