--- a/package/py/Config.in
+++ b/package/py/Config.in
@@ -29,6 +29,12 @@ config BR2_PACKAGE_PY_CURL
 	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_PYTHON_SETUPTOOLS
 
+config BR2_PACKAGE_PY_WPACTRL
+	bool "wpa_supplicant control interface bindings"
+	select BR2_PACKAGE_PYTHON_SETUPTOOLS
+	depends on BR2_PACKAGE_PYTHON
+	depends on BR2_PACKAGE_WPA_SUPPLICANT
+
 source "package/py/py-dns/Config.in"
 source "package/py/py-monotime/Config.in"
 source "package/py/py-yaml/Config.in"
