quantenna: kmsgcat and quantenna-kmsgd.
Change-Id: I44ffa0be90b2a04ee09b40298d4be7f152c3d3fb

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -61,6 +61,12 @@ config BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR
 	help
 	  System manager.
 
+config BR2_PACKAGE_GOOGLE_PLATFORM_QUANTENNA
+	bool "include Quantenna support"
+	default n
+	help
+	  Quantenna support.
+
 config BR2_PACKAGE_GOOGLE_OPENBOX
 	bool "Openbox Release"
 	default n
