--- a/configs/gftv254_defconfig
+++ b/configs/gftv254_defconfig
@@ -71,6 +71,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
+BR2_PACKAGE_GOOGLE_PLATFORM_QUANTENNA=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_TV_BOX=y
 BR2_PACKAGE_CATAWAMPUS=y
