buildroot: add google_libgep package
Change-Id: I8d4650225dd0d55527927ade2e9814c56028b93e

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -162,6 +162,7 @@ config BR2_PACKAGE_GOOGLE_STORAGE_BOX
 	select BR2_PACKAGE_GOOGLE_DVBCAPTURE
 	select BR2_PACKAGE_GOOGLE_IMAGELOADJNI
 	select BR2_PACKAGE_GOOGLE_HDHOMERUN_PLUGIN
+	select BR2_PACKAGE_GOOGLE_LIBGEP
 	select BR2_PACKAGE_GOOGLE_MCASTCAPTURE
 	select BR2_PACKAGE_GOOGLE_MEDIA
 	select BR2_PACKAGE_GOOGLE_MPEGPARSER
