--- a/package/google/Config.in
+++ b/package/google/Config.in
@@ -9,6 +9,7 @@ source "package/google/google_dvbcapture/Config.in"
 source "package/google/google_freetypejni/Config.in"
 source "package/google/google_imageloadjni/Config.in"
 source "package/google/google_jtux/Config.in"
+source "package/google/google_libgep/Config.in"
 source "package/google/google_mcastcapture/Config.in"
 source "package/google/google_frobnicast/Config.in"
 source "package/google/google_mobile_api/Config.in"
