--- a/package/backports-custom/gftv254_defconfig
+++ b/package/backports-custom/gftv254_defconfig
@@ -7,3 +7,9 @@ CPTCFG_CFG80211_DEBUGFS=y
 CPTCFG_CFG80211_INTERNAL_REGDB=y
 CPTCFG_QUANTENNA_PCIE_HOST=m
 CPTCFG_QUANTENNA_PCIE_HOST_MPS_FIX=y
+CPTCFG_BT=m
+CPTCFG_BT_HIDP=m
+CPTCFG_BT_RFCOMM=m
+CPTCFG_BT_HCIBTUSB=m
+CPTCFG_BT_BCM=m
+CPTCFG_BT_HCIBTUSB_BCM=m
