buildroot: add BR2_PACKAGE_GOOGLE_LIBGEP to TV defaults
Change-Id: Ie5839f34ea5e49838287b9a5bb89872d867029bc

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -193,6 +193,7 @@ config BR2_PACKAGE_GOOGLE_TV_BOX
 	select BR2_PACKAGE_GOOGLE_GFRM200
 	select BR2_PACKAGE_GOOGLE_IMAGELOADJNI
 	select BR2_PACKAGE_GOOGLE_JTUX
+	select BR2_PACKAGE_GOOGLE_LIBGEP
 	select BR2_PACKAGE_GOOGLE_LICENSES if BR2_mipsel
 	select BR2_PACKAGE_GOOGLE_MINICLIENT
 	select BR2_PACKAGE_GOOGLE_MOBILE_API
