--- a/package/google/google_mcastcapture/Config.in
+++ b/package/google/google_mcastcapture/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_GOOGLE_MCASTCAPTURE
         bool "google_mcastcapture"
+        select BR2_PACKAGE_GOOGLE_LIBGEP
         select BR2_PACKAGE_OPENSSL
         select BR2_PACKAGE_LIBCURL
         select BR2_PACKAGE_PROTOBUF
