gftv254_defconfig: enable cfg80211.
Change-Id: Iaba28ed8aaafe79dc68fd3d08fbf2c980a82a15a

--- a/package/backports-custom/gftv254_defconfig
+++ b/package/backports-custom/gftv254_defconfig
@@ -1,2 +1,9 @@
+CPTCFG_CFG80211=m
+CPTCFG_CFG80211_DEVELOPER_WARNINGS=y
+CPTCFG_CFG80211_REG_DEBUG=y
+CPTCFG_CFG80211_CERTIFICATION_ONUS=y
+# CPTCFG_CFG80211_DEFAULT_PS is not set
+CPTCFG_CFG80211_DEBUGFS=y
+CPTCFG_CFG80211_INTERNAL_REGDB=y
 CPTCFG_QUANTENNA_PCIE_HOST=m
 CPTCFG_QUANTENNA_PCIE_HOST_MPS_FIX=y
