--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -84,6 +84,7 @@ BR2_PACKAGE_NDISC6_RDISC6=y
 # BR2_PACKAGE_SAMBA_TDB is not set
 # BR2_PACKAGE_SAMBA_TESTPARM is not set
 # BR2_PACKAGE_SAMBA_WINBINDD is not set
+BR2_PACKAGE_SNIPROXY=y
 BR2_PACKAGE_VCONFIG=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
