--- a/package/Config.in
+++ b/package/Config.in
@@ -536,6 +536,7 @@ source "package/rsh-redone/Config.in"
 source "package/rsync/Config.in"
 source "package/samba/Config.in"
 source "package/ser2net/Config.in"
+source "package/sniproxy/Config.in"
 source "package/socat/Config.in"
 source "package/spawn-fcgi/Config.in"
 source "package/squid/Config.in"
@@ -552,6 +553,7 @@ source "package/tn5250/Config.in"
 source "package/traceroute_new/Config.in"
 source "package/transmission/Config.in"
 source "package/ttcp/Config.in"
+source "package/udns/Config.in"
 source "package/udpcast/Config.in"
 source "package/vconfig/Config.in"
 source "package/vpnc/Config.in"
