--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -67,6 +67,7 @@ BR2_PACKAGE_UTIL_LINUX_SWITCH_ROOT=y
 BR2_PACKAGE_GOOGLE_PLATFORM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
+BR2_PACKAGE_GOOGLE_PLATFORM_JSONPOLL=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_TEST=y
