--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -67,6 +67,12 @@ config BR2_PACKAGE_GOOGLE_PLATFORM_QUANTENNA
 	help
 	  Quantenna support.
 
+config BR2_PACKAGE_GOOGLE_PLATFORM_JSONPOLL
+	bool "include jsonpoll tool"
+	help
+	  Include the jsonpoll tool used by PTP devices to poll data
+	  from the modem and radio to be exported via catawampus.
+
 config BR2_PACKAGE_GOOGLE_OPENBOX
 	bool "Openbox Release"
 	default n
