Add signing support for gftv254 kernel.
Change-Id: I2d13a5439403fcb2f598947e594ecce5379725fc

--- a/package/Config.in
+++ b/package/Config.in
@@ -661,6 +661,7 @@ source "package/bcm_bluetooth/Config.in"
 source "package/bcm_drivers/Config.in"
 source "package/bcm_bmoca/Config.in"
 source "package/bcm_signing/Config.in"
+source "package/bcm_bolt_signing/Config.in"
 source "package/bcm_trellis/Config.in"
 source "package/bcm_cfe/Config.in"
 source "package/bcm_vudu/Config.in"
