gfsc100_prod_defconfig: Include ethtool
ethtool was unintentionally removed from prod builds, include it again

Google-Bug-Id: 26698579

Change-Id: I3eac37deb3505059450bdf21defded8048ca075c

--- a/configs/gfsc100_prod_defconfig
+++ b/configs/gfsc100_prod_defconfig
@@ -54,6 +54,7 @@ BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_EBTABLES=y
+BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IFPLUGD=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPTABLES=y
