--- a/configs/gfex250_defconfig
+++ b/configs/gfex250_defconfig
@@ -24,6 +24,7 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LIBLOCKFILE=y
 BR2_PACKAGE_BRIDGE_UTILS=y
+BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_DASH=y
 BR2_PACKAGE_MODULE_INIT_TOOLS=y
