gfch100: add bossa, a tool to flash the atmel
	* will allow field upgrade of atmel chip firmware

Change-Id: Id502f2979ef830988ee158f16e46e42ec65098b3

--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -67,9 +67,9 @@ BR2_PACKAGE_UTIL_LINUX_SWITCH_ROOT=y
 BR2_PACKAGE_GOOGLE_PLATFORM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
-BR2_PACKAGE_GOOGLE_PLATFORM_JSONPOLL=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
+BR2_PACKAGE_GOOGLE_PLATFORM_JSONPOLL=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_PLATFORM_ONLY=y
 BR2_PACKAGE_HFW_GLAUKUS_HAL=y
@@ -77,6 +77,7 @@ BR2_PACKAGE_HFW_GLAUKUS_LINKMAN=y
 BR2_PACKAGE_CATAWAMPUS=y
 BR2_PACKAGE_MV_CPSS=y
 BR2_PACKAGE_FIRMWARE=y
+BR2_PACKAGE_BOSSA=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_TARGET_ROOTFS_SQUASHFS4_XZ=y
 # BR2_TARGET_ROOTFS_TAR is not set
