GFTV200:  Enable wireless TV and provisioning.
Change-Id: I0c16fb00e0d5ee41bbd84a0204e3ec42cfeacad7

--- a/package/python-crypto/Config.in
+++ b/package/python-crypto/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_PYTHON_CRYPTO
 	bool "python-crypto"
 	depends on BR2_PACKAGE_PYTHON
+	select BR2_PACKAGE_GMP
 	help
 	  python-crypto is a Python crypto library.
 
