--- a/package/libpcap/Config.in
+++ b/package/libpcap/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_LIBPCAP
 	bool "libpcap"
 	select BR2_PACKAGE_ZLIB
+	select BR2_PACKAGE_LIBUSB
 	help
 	  A system-independent library for user-level network packet capture.
 
