--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -20,6 +20,7 @@ config BR2_PACKAGE_GOOGLE_PLATFORM_BASE
 	select BR2_PACKAGE_CLOCKSPEED
 	select BR2_PACKAGE_LIBCARES
 	select BR2_PACKAGE_UTIL_LINUX_SCHEDUTILS
+	select BR2_PACKAGE_LIBJSONCPP
 	help
 	  This package is a placeholder that depends on other packages needed
 	  to run the Google Fiber devices.
