gfch100: add craftui to buildroot
Change-Id: I15402e2d0632b69144d724aa6f1ff84165ec1a03

--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -70,6 +70,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_PLATFORM_JSONPOLL=y
+BR2_PACKAGE_GOOGLE_PLATFORM_CRAFTUI=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_PLATFORM_ONLY=y
 BR2_PACKAGE_HFW_GLAUKUS_HAL=y
