Add minijail (ChromeOS sandbox helper) to gfrg200
This will let us sandbox sniproxy, and some other network-facing
programs, a little more tightly than a chroot alone.

Tracking bug: b/27251357.

Change-Id: I9338e963505080b11d9d7e22804bf46ee004b4c6

--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -59,6 +59,7 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IPUTILS=y
 BR2_PACKAGE_IW=y
+BR2_PACKAGE_MINIJAIL=y
 BR2_PACKAGE_MINIUPNPD=y
 BR2_PACKAGE_NDISC6=y
 BR2_PACKAGE_NDISC6_NDISC6=y
