--- a/package/Config.in
+++ b/package/Config.in
@@ -499,6 +499,7 @@ endif
 source "package/links/Config.in"
 source "package/lrzsz/Config.in"
 source "package/mii-diag/Config.in"
+source "package/minijail/Config.in"
 source "package/minissdpd/Config.in"
 source "package/miniupnpd/Config.in"
 source "package/mrouted/Config.in"
