Put the captive portal on a bridge of its own.
* Make one, hopefully safe, ip46tables implementation.
* Move shared captive portal input rules to their own chains.
* Update firewall and network scripts to support multiple bridges.
* Update sniproxy and captive-portal scripts to use the bridge
  interface.

This needs to go in at the same time as go/fibercl/72000.

Change-Id: I18244258be2d414950aa5d8fe4754b1f92d39a0e

--- a/package/sniproxy/sniproxy.conf
+++ b/package/sniproxy/sniproxy.conf
@@ -4,22 +4,15 @@ resolver {
   nameserver 127.0.0.1
 }
 
-listen 8888 {
-    protocol http
-    table http_hosts
-}
-
 listen 8443 {
     protocol tls
     table https_hosts
 }
 
-table http_hosts {
-    example.com$ *:80
-    .*\\.gfsvc\\.com$ *:80
-}
-
 table https_hosts {
     # Google Fiber service domain
     .*\\.gfsvc\\.com$ *:443
+
+    # TODO(willangley): generate this dynamically in cwmpd
+    wifisetup.googlefiber.net *:443
 }
