--- a/configs/gflt110_defconfig
+++ b/configs/gflt110_defconfig
@@ -41,16 +41,13 @@ BR2_PACKAGE_MTD=y
 # BR2_PACKAGE_MTD_UBIUPDATEVOL is not set
 # BR2_PACKAGE_MTD_UBISCRUBBER is not set
 BR2_PACKAGE_UBOOT_TOOLS=y
-BR2_PACKAGE_PYTHON=y
 BR2_PACKAGE_PYTHON_SSL=y
 BR2_PACKAGE_PYTHON_PYEXPAT=y
 BR2_PACKAGE_PY_DNS=y
 BR2_PACKAGE_PY_MONOTIME=y
-BR2_PACKAGE_PY_YAML=y
 BR2_PACKAGE_PYTHON_CRYPTO=y
 BR2_PACKAGE_SQLITE=y
 BR2_PACKAGE_PROTOBUF_VERSION_VALUE="2.6.1"
-BR2_PACKAGE_LIBYAML=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_DROPBEAR=y
@@ -71,6 +68,7 @@ BR2_PACKAGE_UTIL_LINUX_LOGIN_UTILS=y
 BR2_PACKAGE_NANO=y
 BR2_PACKAGE_GOOGLE_PLATFORM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
+BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_FIBER_JACK=y
