Build presterastats tool for gfch100
Change-Id: Iddc14fa662d12657e0be5a216b6db8c00106cb02

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -74,6 +74,12 @@ config BR2_PACKAGE_GOOGLE_PLATFORM_CRAFTUI
 	  Include the craftui web server used by PTP devices for
 	  site configuration.
 
+config BR2_PACKAGE_GOOGLE_PLATFORM_PRESTERASTATS
+	bool "include presterastats tool"
+	help
+	  Include the presterastats tool used by PTP devices to
+	  extract data from the on-board prestera switch
+
 config BR2_PACKAGE_GOOGLE_OPENBOX
 	bool "Openbox Release"
 	default n
