--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -24,7 +24,7 @@ BR2_ROOTFS_DEVICE_TABLE="/dev/null"
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_POST_BUILD_SCRIPT="${TOPDIR}/support/scripts/postbuild.sh"
 BR2_TARGET_GENERIC_PLATFORM_NAME="gfch100"
-BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFCH100 GFCH110"
+BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFCH100"
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_GZIP=y
 BR2_PACKAGE_TRACE_CMD=y
