--- a/configs/gfsc100_newkernel-4.1_defconfig
+++ b/configs/gfsc100_newkernel-4.1_defconfig
@@ -87,6 +87,7 @@ BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_TARGET_ROOTFS_SQUASHFS4_XZ=y
 BR2_PACKAGE_SIMPLERAMFS=y
 # BR2_PACKAGE_SIMPLERAMFS_LINKED_IN is not set
+BR2_PACKAGE_SIMPLERAMFS_XZ=y
 BR2_TARGET_ROOTFS_GINSTALL=y
 BR2_TARGET_ROOTFS_GINSTALL_V4=y
 BR2_TARGET_ROOTFS_GINSTALL_MINIMUM_VERSION=""
