Add support for xz compression of simpleramfs
Google-Bug-Id: 24579073
Google-Bug-Id: 26519506

Change-Id: Ic6b62b84d392a2d7bcb2b760494a5b78b1f5fe16

--- a/package/simpleramfs/Config.in
+++ b/package/simpleramfs/Config.in
@@ -19,3 +19,22 @@ config BR2_PACKAGE_SIMPLERAMFS_LINKED_IN
 	depends on BR2_PACKAGE_SIMPLERAMFS
 	help
 	  Turn the simpleramfs into the initramfs compiled into the kernel image.
+
+if BR2_PACKAGE_SIMPLERAMFS
+
+choice
+	prompt "Compression algorithm"
+	default BR2_PACKAGE_SIMPLERAMFS_GZIP
+	depends on !BR2_PACKAGE_SIMPLERAMFS_LINKED_IN
+	help
+	  Select the compression algorithm for the simpleramfs image.
+
+config BR2_PACKAGE_SIMPLERAMFS_GZIP
+	bool "gzip"
+
+config BR2_PACKAGE_SIMPLERAMFS_XZ
+	bool "xz"
+
+endchoice
+
+endif
