--- a/package/Config.in
+++ b/package/Config.in
@@ -686,6 +686,7 @@ source "package/art2/Config.in"
 endmenu
 
 menu "Marvell custom build"
+source "package/mv_physdk/Config.in"
 source "package/mv_app/Config.in"
 source "package/mv_cpss/Config.in"
 endmenu
