gfch100: Add new phytool package into google_platform and add to GFCH100 config.
Change-Id: Icb4e7ad15d0db61e177daf8dce8207e4475f60f1

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -69,6 +69,13 @@ config BR2_PACKAGE_GOOGLE_PLATFORM_JSONPOLL
 	  Include the jsonpoll tool used by PTP devices to poll data
 	  from the modem and radio to be exported via catawampus.
 
+config BR2_PACKAGE_GOOGLE_PLATFORM_PHYTOOL
+  bool "include phytool"
+  select BR2_PACKAGE_MV_PHYSDK
+  help
+    Include the phytool tool used by PTP devices to interact with
+    Marvell PHY devices through the Marvell MTD SDK.
+
 config BR2_PACKAGE_GOOGLE_PLATFORM_CRAFTUI
 	bool "include craftui"
 	help
