--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -71,6 +71,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_PLATFORM_JSONPOLL=y
 BR2_PACKAGE_GOOGLE_PLATFORM_CRAFTUI=y
+BR2_PACKAGE_GOOGLE_PLATFORM_MACSEC=y
 BR2_PACKAGE_GOOGLE_PLATFORM_PRESTERASTATS=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_PLATFORM_ONLY=y
