Add deps for grpahics packages added in 950d613beb29073c733cb3b8c700016ce58d690c c/63076
You wouldn't notice this as BR2_PACKAGE_GOOGLE_IMAGELOADJNI is selected
by default.

Change-Id: Id99c3346fe9e15e4c20f9a1831036c250c807394

--- a/package/google/google_miniclient/Config.in
+++ b/package/google/google_miniclient/Config.in
@@ -5,5 +5,6 @@ config BR2_PACKAGE_GOOGLE_MINICLIENT
 	select BR2_PACKAGE_GOOGLE_HDCP
 	select BR2_PACKAGE_LIBXML2
 	select BR2_PACKAGE_LIBCURL
+	select BR2_PACKAGE_LIBUNGIF
 	help
           Builds the SageTV miniclient
