--- a/configs/gftv254_defconfig
+++ b/configs/gftv254_defconfig
@@ -90,7 +90,7 @@ BR2_TARGET_ROOTFS_GINSTALL_V4=y
 BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/broadcom/bolt-bin/gftv254"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/bruno_arm"
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="repo://kernel/lockdown"
 BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="HEAD"
 BR2_LINUX_KERNEL_DEFCONFIG="bruno_gfhd254"
 BR2_LINUX_KERNEL_ZIMAGE=y
