--- a/configs/gflt110_defconfig
+++ b/configs/gflt110_defconfig
@@ -69,6 +69,7 @@ BR2_PACKAGE_NANO=y
 BR2_PACKAGE_GOOGLE_PLATFORM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
+BR2_PACKAGE_GOOGLE_PLATFORM_LEDPATTERN=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_FIBER_JACK=y
