--- a/package/golang/Config.in
+++ b/package/golang/Config.in
@@ -4,10 +4,12 @@ source "package/golang/go_cron/Config.in"
 source "package/golang/go_fsnotify/Config.in"
 source "package/golang/go_glog/Config.in"
 source "package/golang/go_godbus_dbus/Config.in"
+source "package/golang/go_golua/Config.in"
 source "package/golang/go_gonzojive_mdns/Config.in"
 source "package/golang/go_google_api/Config.in"
 source "package/golang/go_grpc/Config.in"
 source "package/golang/go_http2/Config.in"
+source "package/golang/go_luar/Config.in"
 source "package/golang/go_miekg_dns/Config.in"
 source "package/golang/go_mock/Config.in"
 source "package/golang/go_net/Config.in"
