--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -64,6 +64,7 @@ BR2_PACKAGE_GPTFDISK=y
 BR2_PACKAGE_GPTFDISK_GDISK=y
 BR2_PACKAGE_GPTFDISK_SGDISK=y
 BR2_PACKAGE_UTIL_LINUX_SWITCH_ROOT=y
+BR2_PACKAGE_GOOGLE_CHIMERA=y
 BR2_PACKAGE_GOOGLE_PLATFORM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
