--- a/package/Config.in
+++ b/package/Config.in
@@ -390,6 +390,7 @@ source "package/librsync/Config.in"
 source "package/libsoup/Config.in"
 source "package/libupnp/Config.in"
 source "package/libvncserver/Config.in"
+source "package/libweave/Config.in"
 endmenu
 
 menu "Other"
