google_chimera: select BR2_PACKAGE_GO_GLOG
Change-Id: I04f0447b045299dee2e3d503b389d0b2117b5463

--- a/package/google/google_chimera/Config.in
+++ b/package/google/google_chimera/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_GOOGLE_CHIMERA
 	bool "google_chimera"
 	default n
+	select BR2_PACKAGE_GO_GLOG
 	select BR2_PACKAGE_GO_GOLUA
 	select BR2_PACKAGE_GO_GRPC
 	select BR2_PACKAGE_GO_LUAR
