libweave: Add dependency on expat and gtest
Google-Bug-Id: 29905066

Change-Id: I98a5c8e73258e63e75be812be329c2257191beab

--- a/package/libweave/Config.in
+++ b/package/libweave/Config.in
@@ -1,5 +1,7 @@
 config BR2_PACKAGE_LIBWEAVE
 	bool "libweave"
+	select BR2_PACKAGE_EXPAT
+	select BR2_PACKAGE_GTEST
 	help
 	  LibWeave is the library for device side implementation of the Weave
 	  protocol.
