Build dialserver for GFHD254
Change-Id: I8929fdf56bdc9bd66910402adc32d1576b16699f

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -233,7 +233,7 @@ config BR2_PACKAGE_GOOGLE_TV_BOX
 	depends on !BR2_PACKAGE_GOOGLE_PLATFORM_ONLY
 	select BR2_PACKAGE_GOOGLE_CAST
 	select BR2_PACKAGE_GOOGLE_DASHPLAYER
-	select BR2_PACKAGE_GOOGLE_DIAL if BR2_mipsel
+	select BR2_PACKAGE_GOOGLE_DIAL
 	select BR2_PACKAGE_GOOGLE_DVBCAPTURE
 	select BR2_PACKAGE_GOOGLE_FREETYPEJNI
 	select BR2_PACKAGE_GOOGLE_GFRM200
