--- a/configs/gftv254_defconfig
+++ b/configs/gftv254_defconfig
@@ -43,6 +43,7 @@ BR2_PACKAGE_PY_MONOTIME=y
 BR2_PACKAGE_PYTHON_CRYPTO=y
 BR2_PACKAGE_PYTHON_GOBJECT=y
 BR2_PACKAGE_OPENSSL_BIN=y
+BR2_PACKAGE_PCRE=y
 BR2_PACKAGE_BLUEZ_UTILS=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_DHCP=y
