--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -13,6 +13,7 @@ config BR2_PACKAGE_GOOGLE_PLATFORM_BASE
 	select BR2_PACKAGE_PROCPS
 	select BR2_PACKAGE_LOCKFILE_PROGS
 	select BR2_PACKAGE_SYSVINIT
+	select BR2_PACKAGE_S6_RC
 	select BR2_PACKAGE_GOOGLE_SIGNING
 	select BR2_PACKAGE_CURL
 	select BR2_PACKAGE_SED
