--- a/package/Config.in
+++ b/package/Config.in
@@ -121,6 +121,7 @@ if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/fbset/Config.in"
 endif
 source "package/fbv/Config.in"
+source "package/graphite2/Config.in"
 source "package/harfbuzz/Config.in"
 source "package/imagemagick/Config.in"
 source "package/linux-fusion/Config.in"
