buildroot: add protobuf support in gcm
Change-Id: I869fd661768667ea5c204eba621862f8e48220c4

--- a/package/google/google_gcm/Config.in
+++ b/package/google/google_gcm/Config.in
@@ -2,5 +2,6 @@ config BR2_PACKAGE_GOOGLE_GCM
 	bool "google_gcm"
 	default n
 	select BR2_PACKAGE_GO_GLOG
+	select BR2_PACKAGE_GO_PROTOBUF
 	help
 	  Google's GCM
