Added cache warming & DNS timing log experiments to dnsmasq startup. Included cache warming package in platform dependencies.
Change-Id: I0693bb086337e2d1a458404b7a5481b9f29361ab

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -52,6 +52,12 @@ config BR2_PACKAGE_GOOGLE_PLATFORM_WAVEGUIDE
 	help
 	  Waveguide tool for Wi-Fi.
 
+config BR2_PACKAGE_GOOGLE_PLATFORM_CACHE_WARMING
+        bool "include cache warming"
+        default n
+        help
+          Periodically fetches top requested hosts.
+
 config BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD
 	bool "include log upload tool"
 	default n
