--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -98,6 +98,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_WAVEGUIDE=y
+BR2_PACKAGE_GOOGLE_PLATFORM_CACHE_WARMING=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
 BR2_PACKAGE_GOOGLE_TEST=y
