Frenzy: backports: add config file
Need to separate Frenzy backports config from Skids/Prowl backports config.

Change-Id: Ic280a5497da7753cb4183f1b610965366aebd142

--- a/configs/gffrenzy_defconfig
+++ b/configs/gffrenzy_defconfig
@@ -34,7 +34,7 @@ BR2_PACKAGE_HOSTAPD_QUANTENNA_WPS=y
 BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA=y
 BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA_WPS=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
-BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfex250_defconfig"
+BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gffrenzy_defconfig"
 BR2_PACKAGE_BACKPORTS_CUSTOM_SITE="backports-quantenna"
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
