--- a/package/google/Config.in
+++ b/package/google/Config.in
@@ -3,6 +3,7 @@ source "package/google/google_dial/Config.in"
 source "package/google/google_keystore_client/Config.in"
 source "package/google/google_licenses/Config.in"
 source "package/google/google_ffmpeg/Config.in"
+source "package/google/google_dashplayer/Config.in"
 source "package/google/google_miniclient/Config.in"
 source "package/google/google_pullreader/Config.in"
 source "package/google/google_dvbcapture/Config.in"
