--- a/package/google/google_dashplayer/Config.in
+++ b/package/google/google_dashplayer/Config.in
@@ -1,4 +1,6 @@
-config BR2_PACKAGE_DASHPLAYER
+config BR2_PACKAGE_GOOGLE_DASHPLAYER
 	bool "Build dash player package"
-	select BR2_PACKAGE_BCM_COMMON
+	select BR2_PACKAGE_LIBXML2
+	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_NINJA
+
