--- a/package/google/google_miniclient/Config.in
+++ b/package/google/google_miniclient/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_GOOGLE_MINICLIENT
         bool "google_miniclient"
 	select BR2_PACKAGE_BCM_ROCKFORD
+	select BR2_PACKAGE_GOOGLE_DASHPLAYER
 	select BR2_PACKAGE_GOOGLE_WIDEVINE
 	select BR2_PACKAGE_GOOGLE_HDCP
 	select BR2_PACKAGE_LIBXML2
