--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -232,6 +232,7 @@ config BR2_PACKAGE_GOOGLE_TV_BOX
 	default n
 	depends on !BR2_PACKAGE_GOOGLE_PLATFORM_ONLY
 	select BR2_PACKAGE_GOOGLE_CAST
+	select BR2_PACKAGE_GOOGLE_DASHPLAYER
 	select BR2_PACKAGE_GOOGLE_DIAL if BR2_mipsel
 	select BR2_PACKAGE_GOOGLE_DVBCAPTURE
 	select BR2_PACKAGE_GOOGLE_FREETYPEJNI
