Add an option to enable icu in gptfdisk package
Enabling this by default causes the simpleramfs filesystem
to contain the icu library. This can increase its size by over
10MB once an application requiring icu is added.

Change-Id: I97649b3917181f641f32e6485ff2b74274d3c658

--- a/package/gptfdisk/Config.in
+++ b/package/gptfdisk/Config.in
@@ -42,4 +42,10 @@ config BR2_PACKAGE_GPTFDISK_CGDISK
 	  Install the ncurses-based GUID partition table (GPT)
 	  manipulator /usr/sbin/cgdisk.
 
+config BR2_PACKAGE_GPTFDISK_ICU
+        bool "Enable ICU support"
+        depends on BR2_PACKAGE_ICU
+        help
+          build with ICU support
+
 endif
