Move DirectFB and Cairo dependencies to Netflix package
Those packages won't be needed once we move to Netflix 4.2.

Change-Id: I2281415a01c4986d2595eaecbbd0276a0d335085

--- a/package/bcm_netflix/Config.in
+++ b/package/bcm_netflix/Config.in
@@ -1,11 +1,17 @@
 config BR2_PACKAGE_BCM_NETFLIX
 	bool "Build Broadcom NetFlix package"
 	select BR2_PACKAGE_BCM_COMMON
+	select BR2_PACKAGE_BCM_DIRECTFB
 	select BR2_PACKAGE_BCM_ROCKFORD
-	select BR2_PACKAGE_NETFLIX_NRD
-	select BR2_PACKAGE_LIBXML2
-	select BR2_PACKAGE_LIBXSLT
-	select BR2_PACKAGE_SQLITE
+	select BR2_PACKAGE_CAIRO
+	select BR2_PACKAGE_CAIRO_PDF
+	select BR2_PACKAGE_CAIRO_PNG
+	select BR2_PACKAGE_CAIRO_SVG
+	select BR2_PACKAGE_DIRECTFB
 	select BR2_PACKAGE_LIBCARES
 	select BR2_PACKAGE_LIBMNG
+	select BR2_PACKAGE_LIBXML2
+	select BR2_PACKAGE_LIBXSLT
+	select BR2_PACKAGE_NETFLIX_NRD
+	select BR2_PACKAGE_SQLITE
 	select BR2_PACKAGE_WEBP
