--- a/package/chromium/Config.in
+++ b/package/chromium/Config.in
@@ -2,6 +2,8 @@ config BR2_PACKAGE_CHROMIUM
 	bool "Build Chromium package"
 	select BR2_PACKAGE_BCM_COMMON
 	select BR2_PACKAGE_BCM_ROCKFORD
+	select BR2_PACKAGE_CAIRO
+	select BR2_PACKAGE_FONTCONFIG
 	select BR2_PACKAGE_LIBCAP
 	select BR2_PACKAGE_LIBNSS
 	select BR2_PACKAGE_NINJA
