--- a/package/google/google_cast/Config.in
+++ b/package/google/google_cast/Config.in
@@ -2,6 +2,8 @@ config BR2_PACKAGE_GOOGLE_CAST
 	bool "Build Google Cast package"
 	select BR2_PACKAGE_BCM_COMMON
 	select BR2_PACKAGE_BCM_ROCKFORD
+	select BR2_PACKAGE_CAIRO
+	select BR2_PACKAGE_FONTCONFIG
 	select BR2_PACKAGE_GOOGLE_WIDEVINE_CENC
 	select BR2_PACKAGE_LIBCAP
 	select BR2_PACKAGE_LIBNSS
