--- a/package/Config.in
+++ b/package/Config.in
@@ -675,6 +675,7 @@ source "package/bcm_trellis/Config.in"
 source "package/bcm_cfe/Config.in"
 source "package/bcm_vudu/Config.in"
 source "package/bcm_miracast/Config.in"
+source "package/bcm_851xxapi/Config.in"
 endmenu
 
 menu "Chromium"
