Skids/Prowl: add MWIFIEX PCIe firmware to image
Change-Id: If9a25c6ca6b344550a121e3c033d4565217ac1e0

--- a/configs/gfex250_defconfig
+++ b/configs/gfex250_defconfig
@@ -36,6 +36,8 @@ BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA_WPS=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfex250_defconfig"
 BR2_PACKAGE_BACKPORTS_CUSTOM_SITE="backports-quantenna"
+BR2_PACKAGE_FIRMWARE=y
+BR2_PACKAGE_FIRMWARE_FILENAMES="mrvl/pcie8*"
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
 BR2_TARGET_ROOTFS_GINSTALL_V4=y
