--- a/configs/gfex250_defconfig
+++ b/configs/gfex250_defconfig
@@ -37,7 +37,7 @@ BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfex250_defconfig"
 BR2_PACKAGE_BACKPORTS_CUSTOM_SITE="backports-quantenna"
 BR2_PACKAGE_FIRMWARE=y
-BR2_PACKAGE_FIRMWARE_FILENAMES="mrvl/pcie8*"
+BR2_PACKAGE_FIRMWARE_FILENAMES="mrvl/pcie*"
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
 BR2_TARGET_ROOTFS_GINSTALL_V4=y
