--- a/configs/gfch100_defconfig
+++ b/configs/gfch100_defconfig
@@ -49,6 +49,7 @@ BR2_PACKAGE_OPENSSL_BIN=y
 BR2_PACKAGE_PROTOBUF=y
 BR2_PACKAGE_LIBCLI=y
 BR2_PACKAGE_BRIDGE_UTILS=y
+BR2_PACKAGE_BCM_851XXAPI=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_EBTABLES=y
@@ -80,6 +81,7 @@ BR2_PACKAGE_GOOGLE_WIPG_MACSEC=y
 BR2_PACKAGE_GOOGLE_WIPG_PHYTOOL=y
 BR2_PACKAGE_HFW_GLAUKUS_HAL=y
 BR2_PACKAGE_HFW_GLAUKUS_LINKMAN=y
+BR2_PACKAGE_HFW_GLAUKUS_PROTOBUF=y
 BR2_PACKAGE_CATAWAMPUS=y
 BR2_PACKAGE_MV_CPSS=y
 BR2_PACKAGE_FIRMWARE=y
