Initial build support for google_oregano-native
For now, nothing selects or depends on this target, but it can be built
manually via:

  make google_oregano_native

Inside of a gfiber-internal out directory.

Change-Id: I8622daf7f35e92b669ec51621ce32666ea227fde

--- a/package/google/Config.in
+++ b/package/google/Config.in
@@ -37,6 +37,7 @@ source "package/google/google_platform/Config.in"
 source "package/google/google_prism/Config.in"
 source "package/google/google_dart_vm/Config.in"
 source "package/google/google_oregano/Config.in"
+source "package/google/google_oregano_native/Config.in"
 source "package/google/google_gflags/Config.in"
 source "package/google/google_glog/Config.in"
 source "package/google/google_gfrm200/Config.in"
