--- a/configs/gflt300_defconfig
+++ b/configs/gflt300_defconfig
@@ -19,8 +19,8 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 BR2_ROOTFS_DEVICE_TABLE="/dev/null"
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_POST_BUILD_SCRIPT="${TOPDIR}/support/scripts/postbuild.sh"
-BR2_TARGET_GENERIC_PLATFORM_NAME="gflt110"
-BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFLT110, GFLT120"
+BR2_TARGET_GENERIC_PLATFORM_NAME="gflt300"
+BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFLT300"
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_TOOLBOX=y
 BR2_PACKAGE_TOYBOX=y
@@ -79,7 +79,7 @@ BR2_PACKAGE_MV_APP_PON_TYPE="GPON"
 BR2_PACKAGE_MV_APP=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
-BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/marvell/gflt110"
+BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/marvell/gflt300"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BOARDNAME="gflt110"
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
