buildroot: add CZMQ support to GCM.
Change-Id: Ia1dfcffef84934e0abe7db12fdb5f3f032a3ebd5

--- a/package/golang/Config.in
+++ b/package/golang/Config.in
@@ -3,6 +3,7 @@ source "package/golang/go_cloud/Config.in"
 source "package/golang/go_cron/Config.in"
 source "package/golang/go_fsnotify/Config.in"
 source "package/golang/go_glog/Config.in"
+source "package/golang/go_goczmq/Config.in"
 source "package/golang/go_godbus_dbus/Config.in"
 source "package/golang/go_golua/Config.in"
 source "package/golang/go_gonzojive_mdns/Config.in"
