--- a/package/google/Config.in
+++ b/package/google/Config.in
@@ -51,4 +51,5 @@ source "package/google/google_glfw_dart/Config.in"
 source "package/google/google_gl_dart/Config.in"
 source "package/google/google_media/Config.in"
 source "package/google/google_wipg/Config.in"
+source "package/google/google_gcm/Config.in"
 endmenu
