--- a/package/Config.in
+++ b/package/Config.in
@@ -293,6 +293,7 @@ source "package/gnutls/Config.in"
 source "package/libgcrypt/Config.in"
 source "package/libgpg-error/Config.in"
 source "package/libnss/Config.in"
+source "package/libsodium/Config.in"
 source "package/openssl/Config.in"
 endmenu
 
@@ -367,6 +368,7 @@ source "package/jsmin/Config.in"
 endmenu
 
 menu "Networking"
+source "package/czmq/Config.in"
 source "package/inadyn/Config.in"
 source "package/libcares/Config.in"
 source "package/libcgi/Config.in"
@@ -393,6 +395,7 @@ source "package/libsoup/Config.in"
 source "package/libupnp/Config.in"
 source "package/libvncserver/Config.in"
 source "package/libweave/Config.in"
+source "package/zeromq/Config.in"
 endmenu
 
 menu "Other"
