--- a/package/Makefile.package.in
+++ b/package/Makefile.package.in
@@ -178,7 +178,8 @@ define DOWNLOAD_REPO
 		(cd $(BUILD_DIR) && \
 		 rm -rf $($(PKG)_BASE_NAME) && \
 		 cd $(TOPDIR)/../$($(PKG)_REPO_PATH) && \
-		 git worktree add $(BUILD_DIR)/$($(PKG)_BASE_NAME) HEAD; \
+		 git worktree add -f $(BUILD_DIR)/$($(PKG)_BASE_NAME) \
+			"$$(git rev-parse --abbrev-ref HEAD)"; \
 		) \
 	fi
 endef
