--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -54,6 +54,7 @@ BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_HOSTAPD=y
+BR2_PACKAGE_HOSTAPD_EAP=y
 BR2_PACKAGE_IGMPPROXY=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPTABLES=y
