--- a/package/catawampus/Config.in
+++ b/package/catawampus/Config.in
@@ -4,6 +4,7 @@ config BR2_PACKAGE_CATAWAMPUS
 	select BR2_PACKAGE_PYTHON_NETIFACES
 	select BR2_PACKAGE_PYTHON_ZLIB
 	select BR2_PACKAGE_PY_CURL
+	select BR2_PACKAGE_PY_TORNADO
 	select BR2_PACKAGE_PY_YAML
 	help
 	  tr-69 management agent.
