--- a/package/google/google_oregano/Config.in
+++ b/package/google/google_oregano/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_GOOGLE_OREGANO
 	bool "google_oregano"
 	select BR2_PACKAGE_GOOGLE_DART_VM
+	select BR2_PACKAGE_GOOGLE_OREGANO_NATIVE
 	help
 	  Include the utilities for supporting Oregano (Marjoram & Basil)
