Frenzy/Skids/Prowl: switch ARC platforms to uImage
Prerequisite:
CL 77160: Skids/Prowl: Add support for building uImage

Change-Id: I62e8f189849d587ded0b5ca6d1b730def351e5c3

--- a/configs/gfex250_defconfig
+++ b/configs/gfex250_defconfig
@@ -38,6 +38,7 @@ BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfex250_defconfig"
 BR2_PACKAGE_BACKPORTS_CUSTOM_SITE="backports-quantenna"
 BR2_PACKAGE_FIRMWARE=y
 BR2_PACKAGE_FIRMWARE_FILENAMES="mrvl/pcie*"
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
 BR2_TARGET_ROOTFS_GINSTALL_V4=y
