--- a/configs/gffrenzy_defconfig
+++ b/configs/gffrenzy_defconfig
@@ -36,6 +36,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA_WPS=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gffrenzy_defconfig"
 BR2_PACKAGE_BACKPORTS_CUSTOM_SITE="backports-quantenna"
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
 BR2_TARGET_ROOTFS_GINSTALL_V4=y
