Fix race when installing buffet and cryptohome
Make google_cryptohome depend on google_buffet.
Bug: 28301831

Change-Id: Ia30ad5476d46ac30e3ca0fcc219debae7cca1c96

--- a/package/google/google_cryptohome/Config.in
+++ b/package/google/google_cryptohome/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_GOOGLE_CRYPTOHOME
        bool "google_cryptohome"
        default n
+       select BR2_PACKAGE_GOOGLE_BUFFET
        help
          Google's Cryptohome
