buildroot: make multiloader ginstall files for gflt
Additionally change the gflt110_defconfig to point to the correct
loader-bin location.

Change-Id: I064ba18974eb6db33de638132d16805352bbd5b4

--- a/configs/gflt110_defconfig
+++ b/configs/gflt110_defconfig
@@ -79,7 +79,7 @@ BR2_PACKAGE_MV_APP_PON_TYPE="GPON"
 BR2_PACKAGE_MV_APP=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
-BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/marvell/gflt110"
+BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/marvell"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BOARDNAME="gflt110"
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
