pyrad: a pure Python RADIUS implementation.
This lets us find out the MAC address of a user when they try to connect
to hostapd, before they are authenticated to the network. Required for
Fiber Managed WiFi work.

Depends on go/fibercl/77308 (for the package archive.)

Change-Id: Ib37042f2abebf6c151ec7d0d511b5e25db8647fa

--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -42,6 +42,7 @@ BR2_PACKAGE_PYTHON_PYEXPAT=y
 BR2_PACKAGE_PY_GOOGLE_API=y
 BR2_PACKAGE_PY_DNS=y
 BR2_PACKAGE_PY_MONOTIME=y
+BR2_PACKAGE_PY_PYRAD=y
 BR2_PACKAGE_PYTHON_CRYPTO=y
 BR2_PACKAGE_OPENSSL_BIN=y
 BR2_PACKAGE_LIBNETFILTER_CONNTRACK=y
