sagetv removal: remove JNI, JTux
Add PNG and JPEG as explicit dependencies, we
were pulling them in transitively through JNI.

Change-Id: I7a2befa69ad3e26db89ad8ceff30f4cf405274ec

--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -239,10 +239,7 @@ config BR2_PACKAGE_GOOGLE_TV_BOX
 	select BR2_PACKAGE_GOOGLE_DASHPLAYER
 	select BR2_PACKAGE_GOOGLE_DIAL
 	select BR2_PACKAGE_GOOGLE_DVBCAPTURE
-	select BR2_PACKAGE_GOOGLE_FREETYPEJNI
 	select BR2_PACKAGE_GOOGLE_GFRM200
-	select BR2_PACKAGE_GOOGLE_IMAGELOADJNI
-	select BR2_PACKAGE_GOOGLE_JTUX
 	select BR2_PACKAGE_GOOGLE_LIBGEP
 	select BR2_PACKAGE_GOOGLE_LICENSES if BR2_mipsel
 	select BR2_PACKAGE_GOOGLE_MEDIA
@@ -259,6 +256,8 @@ config BR2_PACKAGE_GOOGLE_TV_BOX
 	select BR2_PACKAGE_BCM_NETFLIX if BR2_mipsel
 	select BR2_PACKAGE_BCM_VUDU if BR2_mipsel
 	select BR2_PACKAGE_IFPLUGD
+	select BR2_PACKAGE_JPEG
+	select BR2_PACKAGE_LIBPNG
 	select BR2_PACKAGE_LIBPROJECTM
 	select BR2_PACKAGE_BOOST
 	select BR2_PACKAGE_AVAHI
