Remove prefer static linking, add python core.
Change-Id: I41edf7799aad43f0b0667d36d2c0668a4cf3e40c

--- a/configs/gfrg240_defconfig
+++ b/configs/gfrg240_defconfig
@@ -2,7 +2,6 @@ BR2_arc=y
 BR2_DL_DIR="${TOPDIR}/../vendor/opensource/tarballs"
 BR2_JLEVEL=15
 BR2_CCACHE=y
-BR2_PREFER_STATIC_LIB=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_PATH="${TOPDIR}/../toolchains/quantenna/usr"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arc-linux"
@@ -21,6 +20,7 @@ BR2_TARGET_GENERIC_PLATFORM_NAME="gfrg240"
 BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFRG240"
 BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/skids.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_PYTHON=y
 BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LIBLOCKFILE=y
 BR2_PACKAGE_BRIDGE_UTILS=y
