Add Googles style guide repository
This is mostly useful for the cpplint tool contained in the repository,
which I have added as a host tool. Packages should be able to depend on
host-google_styleguide and this will ensure that cpplint.py is available
in <out>/host/usr/bin/.

Change-Id: I563ce7795536ab8ba0321dbc45be72013c192cc8

--- a/package/google/Config.in
+++ b/package/google/Config.in
@@ -53,4 +53,5 @@ source "package/google/google_gl_dart/Config.in"
 source "package/google/google_media/Config.in"
 source "package/google/google_wipg/Config.in"
 source "package/google/google_gcm/Config.in"
+source "package/google/google_styleguide/Config.in"
 endmenu
