Add libevent dependency to mcastcapture.
(For adding libevent HTTP server to dashsrv)

Change-Id: I2480d7ceccb761ff3ce9e6f6f46f18359e3a5045

--- a/package/google/google_mcastcapture/Config.in
+++ b/package/google/google_mcastcapture/Config.in
@@ -4,5 +4,6 @@ config BR2_PACKAGE_GOOGLE_MCASTCAPTURE
         select BR2_PACKAGE_OPENSSL
         select BR2_PACKAGE_LIBCURL
         select BR2_PACKAGE_PROTOBUF
+        select BR2_PACKAGE_LIBEVENT
         help
           Builds the mcastcapture sagesrv binary and libptsindex.so library
