Enable quagga package for spacecast
Bug: 29584482
Change-Id: I6232974c0bff758a66c480c1f6579db30bd86bdf

--- a/configs/gfsc100_prod_defconfig
+++ b/configs/gfsc100_prod_defconfig
@@ -62,6 +62,10 @@ BR2_PACKAGE_IPUTILS=y
 BR2_PACKAGE_NDISC6=y
 BR2_PACKAGE_NDISC6_NDISC6=y
 BR2_PACKAGE_NDISC6_RDISC6=y
+BR2_PACKAGE_QUAGGA=y
+BR2_PACKAGE_QUAGGA_ZEBRA=y
+BR2_PACKAGE_QUAGGA_OSPFD=y
+BR2_PACKAGE_QUAGGA_OPAQUE_LSA=y
 BR2_PACKAGE_VCONFIG=y
 BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_SUDO_ROOT_ONLY=y
