Add dependency on jpeg.
Change-Id: Ifb85165274d3b6d64c51e49e9826285db77c809a

--- a/package/google/google_miniclient/Config.in
+++ b/package/google/google_miniclient/Config.in
@@ -7,5 +7,6 @@ config BR2_PACKAGE_GOOGLE_MINICLIENT
 	select BR2_PACKAGE_LIBXML2
 	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_LIBUNGIF
+	select BR2_PACKAGE_JPEG
 	help
           Builds the SageTV miniclient
