google_dashplayer: Declare dependency on google_pullreader
Change-Id: I33aa817db7da74d42b556de5c26ef371a767e890

--- a/package/google/google_dashplayer/Config.in
+++ b/package/google/google_dashplayer/Config.in
@@ -3,4 +3,5 @@ config BR2_PACKAGE_GOOGLE_DASHPLAYER
 	select BR2_PACKAGE_LIBXML2
 	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_NINJA
+	select BR2_PACKAGE_GOOGLE_PULLREADER
 
