Prune git worktree before adding a new worktree
Otherwise deleting the out directory will leave stale worktrees that
block checkout of a branch.

Change-Id: I37af802e4c63712f6877f922d04794be148b95fd

--- a/package/Makefile.package.in
+++ b/package/Makefile.package.in
@@ -178,6 +178,7 @@ define DOWNLOAD_REPO
 		(cd $(BUILD_DIR) && \
 		 rm -rf $($(PKG)_BASE_NAME) && \
 		 cd $(TOPDIR)/../$($(PKG)_REPO_PATH) && \
+		 git worktree prune && \
 		 git worktree add -f $(BUILD_DIR)/$($(PKG)_BASE_NAME) \
 			"$$(git rev-parse --abbrev-ref HEAD)"; \
 		) \
