--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -117,7 +117,7 @@ BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_HOST=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfrg200_defconfig"
 BR2_PACKAGE_FIRMWARE=y
-BR2_PACKAGE_FIRMWARE_FILENAMES="ath10k/QCA988X/hw2.0/*.bin htc_9271.fw rtlwifi/rtl8192cufw.bin ar9*.fw mrvl/usb8[78]97* ./mwl8k/fmimage_8764_ap-1.fw"
+BR2_PACKAGE_FIRMWARE_FILENAMES="ath10k/*.bin ath10k/QCA988X/hw2.0/*.bin htc_9271.fw rtlwifi/rtl8192cufw.bin ar9*.fw mrvl/usb8[78]97* ./mwl8k/fmimage_8764_ap-1.fw"
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_TARGET_ROOTFS_SQUASHFS4_XZ=y
 # BR2_TARGET_ROOTFS_TAR is not set
