--- a/configs/gfrg240_defconfig
+++ b/configs/gfrg240_defconfig
@@ -18,17 +18,49 @@ BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_POST_BUILD_SCRIPT="${TOPDIR}/support/scripts/postbuild.sh"
 BR2_TARGET_GENERIC_PLATFORM_NAME="gfrg240"
 BR2_TARGET_GENERIC_PLATFORMS_SUPPORTED="GFRG240"
-BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/skids.config"
-BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
-BR2_PACKAGE_PYTHON=y
-BR2_PACKAGE_OPENSSL=y
-BR2_PACKAGE_LIBLOCKFILE=y
+# BR2_PACKAGE_BUSYBOX is not set
+BR2_PACKAGE_TOOLBOX=y
+BR2_PACKAGE_TOYBOX=y
+BR2_PACKAGE_GZIP=y
+BR2_PACKAGE_MEMTESTER=y
+BR2_PACKAGE_MTD=y
+BR2_PACKAGE_PYTHON_SSL=y
+BR2_PACKAGE_PYTHON_PYEXPAT=y
+BR2_PACKAGE_PY_DNS=y
+BR2_PACKAGE_PY_MONOTIME=y
+BR2_PACKAGE_PYTHON_CRYPTO=y
+BR2_PACKAGE_LIBNETFILTER_CONNTRACK=y
+BR2_PACKAGE_NCURSES=y
 BR2_PACKAGE_BRIDGE_UTILS=y
+BR2_PACKAGE_DHCP=y
+BR2_PACKAGE_DHCP_CLIENT=y
+BR2_PACKAGE_DNSMASQ=y
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_HOSTAPD=y
+BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_IPTABLES=y
+BR2_PACKAGE_IPUTILS=y
+BR2_PACKAGE_IW=y
+BR2_PACKAGE_MINIUPNPD=y
+BR2_PACKAGE_NDISC6=y
+BR2_PACKAGE_NDISC6_NDISC6=y
+BR2_PACKAGE_NDISC6_RDISC6=y
 BR2_PACKAGE_TCPDUMP=y
+BR2_PACKAGE_VCONFIG=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_PACKAGE_DASH=y
 BR2_PACKAGE_MODULE_INIT_TOOLS=y
-BR2_PACKAGE_QUANTENNA_DRIVERS_STANDALONE=y
+BR2_PACKAGE_SYSKLOGD=y
+BR2_PACKAGE_UTIL_LINUX=y
+BR2_PACKAGE_UTIL_LINUX_AGETTY=y
+BR2_PACKAGE_UTIL_LINUX_LOGIN_UTILS=y
+BR2_PACKAGE_GOOGLE_PLATFORM=y
+BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
+BR2_PACKAGE_GOOGLE_PLATFORM_WAVEGUIDE=y
+BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
+BR2_PACKAGE_GOOGLE_WINDCHARGER=y
+BR2_PACKAGE_CATAWAMPUS=y
 BR2_PACKAGE_HOSTAPD_QUANTENNA=y
 BR2_PACKAGE_HOSTAPD_QUANTENNA_WPS=y
 BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA=y
